src/objects/ServiceHistorys__x.object
<CustomObject>
    <description>ServiceHistorys</description>
    <externalDataSource>ODS_Data</externalDataSource>
    <externalName>ServiceHistorys</externalName>
    <fields>
        <fullName>CustPayTotPr__c</fullName>
        <description>CustPayTotPr</description>
        <externalDeveloperName>CustPayTotPr</externalDeveloperName>
        <label>Customer Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataCllctnSts__c</fullName>
        <description>DataCllctnSts</description>
        <externalDeveloperName>DataCllctnSts</externalDeveloperName>
        <label>Data Collection Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealrCd__c</fullName>
        <description>DealrCd</description>
        <externalDeveloperName>DealrCd</externalDeveloperName>
        <label>Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealrLabRt__c</fullName>
        <description>DealrLabRt</description>
        <externalDeveloperName>DealrLabRt</externalDeveloperName>
        <label>Dealer Hourly Labour Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DmsMakeCd__c</fullName>
        <description>DmsMakeCd</description>
        <externalDeveloperName>DmsMakeCd</externalDeveloperName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcptnCd__c</fullName>
        <description>ExcptnCd</description>
        <externalDeveloperName>ExcptnCd</externalDeveloperName>
        <label>Exception Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntrnlTotPurchAmt__c</fullName>
        <description>IntrnlTotPurchAmt</description>
        <externalDeveloperName>IntrnlTotPurchAmt</externalDeveloperName>
        <label>Honda Canada Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LabCustPaidAmt__c</fullName>
        <description>LabCustPaidAmt</description>
        <externalDeveloperName>LabCustPaidAmt</externalDeveloperName>
        <label>Labour Customer Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LbrIntrnlPaidAmt__c</fullName>
        <description>LbrIntrnlPaidAmt</description>
        <externalDeveloperName>LbrIntrnlPaidAmt</externalDeveloperName>
        <label>Labour Internal Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LbrWrntyPaidAmt__c</fullName>
        <description>LbrWrntyPaidAmt</description>
        <externalDeveloperName>LbrWrntyPaidAmt</externalDeveloperName>
        <label>Labour Warranty Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LicnsPlateNum__c</fullName>
        <description>LicnsPlateNum</description>
        <externalDeveloperName>LicnsPlateNum</externalDeveloperName>
        <label>License Plate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocId__c</fullName>
        <description>LocId</description>
        <externalDeveloperName>LocId</externalDeveloperName>
        <label>LocId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MdlTyp__c</fullName>
        <description>MdlTyp</description>
        <externalDeveloperName>MdlTyp</externalDeveloperName>
        <label>Model Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MdlYr__c</fullName>
        <description>MdlYr</description>
        <externalDeveloperName>MdlYr</externalDeveloperName>
        <label>Model Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MileageIn__c</fullName>
        <description>MileageIn</description>
        <externalDeveloperName>MileageIn</externalDeveloperName>
        <label>Mileage In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MileageOut__c</fullName>
        <description>MileageOut</description>
        <externalDeveloperName>MileageOut</externalDeveloperName>
        <label>Mileage Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiscCustPaidAmt__c</fullName>
        <description>MiscCustPaidAmt</description>
        <externalDeveloperName>MiscCustPaidAmt</externalDeveloperName>
        <label>Miscellaneous Customer Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MiscIntrnlPaidAmt__c</fullName>
        <description>MiscIntrnlPaidAmt</description>
        <externalDeveloperName>MiscIntrnlPaidAmt</externalDeveloperName>
        <label>Miscellaneous Internal Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MiscWrntyPaidAmt__c</fullName>
        <description>MiscWrntyPaidAmt</description>
        <externalDeveloperName>MiscWrntyPaidAmt</externalDeveloperName>
        <label>Miscellaneous Warranty Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartCustPaidAmt__c</fullName>
        <description>PartCustPaidAmt</description>
        <externalDeveloperName>PartCustPaidAmt</externalDeveloperName>
        <label>Parts Customer Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartIntrnlPaidAmt__c</fullName>
        <description>PartIntrnlPaidAmt</description>
        <externalDeveloperName>PartIntrnlPaidAmt</externalDeveloperName>
        <label>Parts Internal Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartWrntyPaidAmt__c</fullName>
        <description>PartWrntyPaidAmt</description>
        <externalDeveloperName>PartWrntyPaidAmt</externalDeveloperName>
        <label>Parts Warranty Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartyId__c</fullName>
        <description>PartyId</description>
        <externalDeveloperName>PartyId</externalDeveloperName>
        <label>PartyId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoCmnt__c</fullName>
        <description>RoCmnt</description>
        <externalDeveloperName>RoCmnt</externalDeveloperName>
        <label>Repair Order Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoDt__c</fullName>
        <description>RoDt</description>
        <externalDeveloperName>RoDt</externalDeveloperName>
        <label>Repair Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RoNum__c</fullName>
        <description>RoNum</description>
        <externalDeveloperName>RoNum</externalDeveloperName>
        <label>Repair Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoVin__c</fullName>
        <description>RoVin</description>
        <externalDeveloperName>RoVin</externalDeveloperName>
        <label>RoVin</label>
        <length>255</length>
        <referenceTargetField>VIN__c.ProductSerialNumber__c</referenceTargetField>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>ServiceHistorys</relationshipLabel>
        <relationshipName>ServiceHistorys</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>RprEvntId__c</fullName>
        <description>RprEvntId</description>
        <externalDeveloperName>RprEvntId</externalDeveloperName>
        <label>RprEvntId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SrcDealrCd__c</fullName>
        <description>SrcDealrCd</description>
        <externalDeveloperName>SrcDealrCd</externalDeveloperName>
        <label>Service Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SrvcEmpId__c</fullName>
        <description>SrvcEmpId</description>
        <externalDeveloperName>SrvcEmpId</externalDeveloperName>
        <label>Service Advisor ID Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SrvcEmpName__c</fullName>
        <description>SrvcEmpName</description>
        <externalDeveloperName>SrvcEmpName</externalDeveloperName>
        <label>Service Advisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotLbrPaidAmt__c</fullName>
        <description>TotLbrPaidAmt</description>
        <externalDeveloperName>TotLbrPaidAmt</externalDeveloperName>
        <label>Total Labour Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotMiscPaidAmt__c</fullName>
        <description>TotMiscPaidAmt</description>
        <externalDeveloperName>TotMiscPaidAmt</externalDeveloperName>
        <label>Total Miscellaneous Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotPartPaidAmt__c</fullName>
        <description>TotPartPaidAmt</description>
        <externalDeveloperName>TotPartPaidAmt</externalDeveloperName>
        <label>Total Parts Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TreadAcctInd__c</fullName>
        <description>TreadAcctInd</description>
        <externalDeveloperName>TreadAcctInd</externalDeveloperName>
        <label>Tread Account Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ucid__c</fullName>
        <description>Ucid</description>
        <externalDeveloperName>Ucid</externalDeveloperName>
        <label>Link to Customer</label>
        <length>128</length>
        <referenceTargetField>Contact.UCID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service History</relationshipLabel>
        <relationshipName>ServiceHistorys</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>WrntyTotPurchAmt__c</fullName>
        <description>WrntyTotPurchAmt</description>
        <externalDeveloperName>WrntyTotPurchAmt</externalDeveloperName>
        <label>Warranty Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Service History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DisplayUrl</columns>
        <columns>ExternalId</columns>
        <columns>Ucid__c</columns>
        <columns>MdlTyp__c</columns>
        <columns>DmsMakeCd__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Service History</pluralLabel>
</CustomObject>